--- a/data/config-activities.json
+++ b/data/config-activities.json
@@ -111,6 +111,82 @@
                     "gsheet": "quiz_hint_url"
                 }
             }
+        },
+        "awesetouchi":{
+            "header": "",
+            "footer": "",
+            "form": {
+                "category": {
+                    "glot": "act_category",
+                    "type": "select",
+                    "category": [
+                        "現代アート",
+                        "古代アート",
+                        "現代クラフト",
+                        "伝統クラフト",
+                        "現代建築",
+                        "伝統建築",
+                        "ハイブリッド建築",
+                        "サステナブルなレストラン",
+                        "サステナブルなカフェ",
+                        "うどん",
+                        "サステナブルな食料品店",
+                        "サステナブルなグッズショップ",
+                        "野草木",
+                        "園芸植物",
+                        "野獣",
+                        "ペット",
+                        "家畜",
+                        "野鳥",
+                        "爬虫類と両生類",
+                        "昆虫",
+                        "苔・藻類",
+                        "ジオ（地質）",
+                        "ビューポイント"
+                    ],
+                    "gsheet": "category"
+                },
+                "name": {
+                    "glot": "act_name",
+                    "type": "text",
+                    "gsheet": "name"
+                },
+                "title": {
+                    "glot": "act_title",
+                    "type": "text",
+                    "gsheet": "title"
+                },
+                "memo": {
+                    "glot": "act_memo",
+                    "type": "textarea",
+                    "gsheet": "body"
+                },
+                "official_url": {
+                    "glot": "act_official_url",
+                    "type": "url",
+                    "gsheet": "official_url"
+                },
+                "recommend_url": {
+                    "glot": "act_recommend_url",
+                    "type": "url",
+                    "gsheet": "recommend_url"
+                },
+                "picture_url1": {
+                    "glot": "act_picture_url1",
+                    "type": "image_url",
+                    "gsheet": "picture_url1"
+                },
+                "picture_url2": {
+                    "glot": "act_picture_url2",
+                    "type": "image_url",
+                    "gsheet": "picture_url2"
+                },
+                "picture_url3": {
+                    "glot": "act_picture_url3",
+                    "type": "image_url",
+                    "gsheet": "picture_url3"
+                }
+            }
         }
     }
 }
